--- a/l10n/ar.json
+++ b/l10n/ar.json
@@ -18,7 +18,7 @@
     "Sort by name" : "Order by name",
     "Sort by date" : "Order by date",
     "OK" : "موافق",
-    "Category" : "الفئة",
+    "Category" : "التصنيف",
     "Comment" : "تعليق",
     "Share this location" : "أرسل هذا الموقع",
     "Shared location" : "الموقع المشارك",
@@ -26,6 +26,7 @@
     "Select all" : "تحديد الكل",
     "Save" : "Save",
     "Quit" : "خروج",
+    "Load more" : "حمّل أكثر",
     "Tracks" : "المسارات",
     "Devices" : "الأجهزة",
     "Tags" : "الوسوم",
