--- a/l10n/gl.json
+++ b/l10n/gl.json
@@ -1,5 +1,5 @@
 { "translations": {
-    "File not found" : "Arquivo non atopado",
+    "File not found" : "Ficheiro non atopado",
     "Personal" : "Persoal",
     "Maps" : "Mapas",
     "🌍🌏🌎 The whole world fits inside your cloud!" : "🌍🌏🌎 O mundo cabe dentro da súa nube!",
@@ -183,7 +183,7 @@
     "Devices exported in {path}" : "Dispositivos exportados en {path}",
     "Failed to export devices" : "Produciuse un fallo ao exportar os dispositivos",
     "Failed to delete device" : "Produciuse un fallo ao eliminar o dispositivo",
-    "Import devices from gpx (Nextcloud Maps) or kml/kmz (Google Timeline) file" : "Importar dispositivos dende gpx (Mapas do Nextcloud) ou ficheiros kml/kmz (Google Timeline)",
+    "Import devices from gpx (Nextcloud Maps) or kml/kmz (Google Timeline) file" : "Importar dispositivos dende gpx (Mapas de Nextcloud) ou ficheiros kml/kmz (Google Timeline)",
     "{nb} devices imported from {path}" : "{nb} dispositivos importados dende {path}",
     "Failed to import devices" : "Produciuse un fallo ao importar os dispositivos",
     "Default" : "Predeterminado",
@@ -235,12 +235,12 @@
     "GraphHopper settings" : "Axustes GraphHopper",
     "A GraphHopper server URL looks like this : https://my.graphhopper.server.org:8989/route" : "Un URL do servidor GraphHopper ten este aspecto : https://my.graphhopper.server.org:8989/route",
     "GraphHopper server URL (will use main graphhopper server if empty)" : "URL do servidor GraphHopper (empregará o servidor principal Graphhopper se está baleiro)",
-    "GraphHopper API key (mandatory if main server used)" : "Clave API GraphHopper (obrigatorio se se emprega o servidor principal)",
+    "GraphHopper API key (mandatory if main server used)" : "Chave API GraphHopper (obrigatorio se se emprega o servidor principal)",
     "Mapbox Website" : "Sitio web de Mapbox",
     "Mapbox settings" : "Axustes do Mapbox",
-    "Set the API key to use Mapbox routing service." : "Estabeleza a clave API para usar o servizo de cálculo de rutas de Mapbox.",
+    "Set the API key to use Mapbox routing service." : "Estabeleza a chave API para usar o servizo de cálculo de rutas de Mapbox.",
     "Leave empty to disable." : "Deixar baleiro para desactivar.",
-    "Mapbox API key" : "Clave da API do Mapbox",
+    "Mapbox API key" : "Chave da API do Mapbox",
     "Settings" : "Axustes"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
